// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule allowed-links should contain contextual documentation absolute 1`] = `
{
  "description": "Absolute links are not allowed by current configuration.",
  "url": "https://html-validate.org/rules/allowed-links.html",
}
`;

exports[`rule allowed-links should contain contextual documentation external 1`] = `
{
  "description": "External links are not allowed by current configuration.",
  "url": "https://html-validate.org/rules/allowed-links.html",
}
`;

exports[`rule allowed-links should contain contextual documentation relative to base 1`] = `
{
  "description": "Links relative to <base> are not allowed by current configuration.",
  "url": "https://html-validate.org/rules/allowed-links.html",
}
`;

exports[`rule allowed-links should contain contextual documentation relative to path 1`] = `
{
  "description": "Relative links are not allowed by current configuration.",
  "url": "https://html-validate.org/rules/allowed-links.html",
}
`;

exports[`rule allowed-links should contain documentation 1`] = `
{
  "description": "This link type is not allowed by current configuration",
  "url": "https://html-validate.org/rules/allowed-links.html",
}
`;
